# cql-protocol

./: Cargo.toml  README.md
src/: codec.rs  compression.rs  def.rs  frame.rs  lib.rs  message.rs  result.rs  types.rs  vint.rs
src/request/: auth_response.rs  batch.rs  execute.rs  mod.rs  options.rs  prepare.rs  query.rs  register.rs  startup.rs
src/response/: auth_challenge.rs  auth_success.rs  authenticate.rs  error.rs  event.rs  mod.rs  ready.rs  result.rs  supported.rs
tests/: client.rs  common.rs  fake_snappy.rs  mod.rs  snappy.rs  test_def.rs  test_frame.rs  test_types.rs  test_vint.rs
tests/request/: mod.rs  test_auth_response.rs  test_batch.rs  test_execute.rs  test_options.rs  test_prepare.rs  test_query.rs  test_register.rs  test_startup.rs
tests/respone/: mod.rs  test_auth_challenge.rs  test_auth_success.rs  test_authenticate.rs  test_error.rs  test_event.rs  test_ready.rs  test_result.rs  test_supported.rs
