[package]
name = "cql-protocol"
version = "0.1.0"
authors = ["baitu <zbaitu@gmail.com>"]
edition = "2018"

[lib]
name = "cql"

[dependencies]
ascii = "1.0.0"
bigdecimal = "0.1.0"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
maplit = "1.0.2"
num = "0.2.0"
num-derive = "0.2"
num-traits = "0.2"
strum = "0.15.0"
strum_macros = "0.15.0"
time = "0.1.42"
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }

[dev-dependencies]
snap = "0.2"
